--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@wagmi/cli": "latest",
+    "@wagmi/cli": "^2.1.15",
     "autoprefixer": "^10.4.20",
     "buffer": "^6.0.3",
     "postcss": "^8.4.41",
